updating about page and cleaning up some styles

--- a/about.html
+++ b/about.html
@@ -4,10 +4,11 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Welcome to danvega.dev: About Me</title>
-  <meta name="description" content="This is my about me page"/>
+  <meta name="description" content="This is my about me page" />
   <link rel="stylesheet" href="css/styles.css" />
-  <link href="https://fonts.googleapis.com/css?family=Oswald:400,600,700|Roboto+Slab:300,400&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css">
+  <link href="https://fonts.googleapis.com/css?family=Oswald:400,600,700|Roboto+Slab:300,400&display=swap"
+    rel="stylesheet" />
+  <script src="https://kit.fontawesome.com/8f41a6f1ce.js" crossorigin="anonymous"></script>
 </head>
 <body>
   <div class="container grow">
@@ -83,6 +84,7 @@
     </div>
   </footer>
 
-  <script src="js/index.js" defer/>
-</body>
+  <script src="js/index.js" defer />
+
+  </body>
 </html>
